infra/k3s/manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-infra
---
apiVersion: v1
kind: Namespace
metadata:
  name: devops-platform
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
